gitops/clusters/rke2-main/premium-3node/apps/platform-valkey/service-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-valkey-primary
  namespace: platform-cache
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: platform-valkey
    app.kubernetes.io/name: valkey
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 6379
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/instance: platform-valkey
    app.kubernetes.io/name: valkey
    statefulset.kubernetes.io/pod-name: platform-valkey-0
